Fixes weird big gap between survey questions in audit page on Firefox

--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -302,7 +302,6 @@ section.question {
     }
 
     .question {
-        height: 100%;
         padding-top: 14px;
 
         .legend {
